[package]
name = "compile_with_bazel"
version = "0.0.0"

[dependencies]
chrono = "0.4.0"
fern = "0.4.3"
futures = "0.1.17"
hyper = "0.11.7"
itertools = "0.7.4"
lazy_static = "0.2.11"
libc = "0.2.34"
log = "0.3.8"
rand = "0.3.18"
specs = "0.10.0"
tic = "0.3.0"
time = "0.1.38"
vk-sys = "0.3.2"
glfw = "0.20.0"
zcfg = "0.2.0"
zcfg_flag_parser = "0.2.0"
gnuplot = "0.0.24"
sdl2 = "0.31.0"
bindgen = "0.32.2"
dylib = "0.0.3"
x11-dl = "2.17.2"
rustfmt-nightly = "0.3.6"

[lib]
path = "fake_lib.rs"

[raze]
workspace_path = "//cargo"
target = "x86_64-unknown-linux-gnu"
genmode = "Remote"

[raze.crates.x11-dl.'2.17.2']
gen_buildrs = true

[raze.crates.rustfmt-nightly.'0.3.6']
extra_aliased_targets = [
  "cargo_bin_rustfmt"
]
gen_buildrs = true

[raze.crates.sdl2.'0.31.0']
skipped_deps = [
  "sdl2-sys-0.31.0"
]
additional_deps = [
  "@//third_party/SDL2:sdl2_sys"
]

[raze.crates.bindgen.'0.32.2']
gen_buildrs = true
extra_aliased_targets = [
  "cargo_bin_bindgen"
]

[raze.crates.clang-sys.'0.21.1']
gen_buildrs = true
additional_deps = [
  "@llvm//:clang"
]
